--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dotenv": "^3.4.9",
-    "react-native-maps": "1.7.1"
+    "react-native-maps": "1.7.1",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
